fix(side-menu): z-index

--- a/core/src/components/side-menu/side-menu.scss
+++ b/core/src/components/side-menu/side-menu.scss
@@ -11,6 +11,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: tds-z-index(side-menu);
 
   .wrapper {
     height: inherit;
@@ -67,7 +68,7 @@
 @media (max-width: $grid-lg) {
   :host(.menu-opened) {
     pointer-events: auto;
-    z-index: tds-z-index(header) + 1;
+    z-index: tds-z-index(side-menu);
   }
 }
 
